fixed html(semantic), css & layout issues

--- a/style.css
+++ b/style.css
@@ -176,6 +176,26 @@
 
 }
 
+@layer layout {
+    .wrapper {
+        --wrapper-max-width: 1130px;
+
+        max-width: var(--wrapper-max-width);
+        margin-inline: auto;
+        padding-inline: 1rem;
+        box-sizing: content-box;
+    }
+
+    &[data-width="narrow"] {
+        --wrapper-max-width: 720px;
+    }
+
+    &[data-width="wide"] {
+        --wrapper-max-width: 1330px;
+
+    }
+}
+
 @layer utilities {
     .visually-hidden {
         clip: rect(0 0 0 0);
@@ -187,5 +207,3 @@
         width: 1px;
     }
 }
-
-
